rename to intersection

--- a/DeviceSimulation/appsettings.json
+++ b/DeviceSimulation/appsettings.json
@@ -5,13 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-    "device-1": {
-      "ConnectionString": "HostName=test-azure-hub.azure-devices.net;DeviceId=device-1;SharedAccessKey=iW1eksfB6tczkdokVjRk7OHh6zFNl1YThPOygVQ5I3s=",
-      "TransportType": "Mqtt"
-    },
-    "device-2": {
-      "ConnectionString": "HostName=test-azure-hub.azure-devices.net;DeviceId=contoso-device-1;SharedAccessKey=xj9Ph1GxKg5kDp97PwqsEM2Dw8cvxYZ6NSBIpDMDaQQ=",
-      "TransportType": "Mqtt"
-    },
+  "device-1": {
+    "DeviceId": "intersection-1",
+    "ConnectionString": "HostName=test-azure-hub.azure-devices.net;DeviceId=device-1;SharedAccessKey=iW1eksfB6tczkdokVjRk7OHh6zFNl1YThPOygVQ5I3s=",
+    "TransportType": "Mqtt"
+  },
+  "device-2": {
+    "DeviceId": "intersection-2",
+    "ConnectionString": "HostName=test-azure-hub.azure-devices.net;DeviceId=contoso-device-1;SharedAccessKey=xj9Ph1GxKg5kDp97PwqsEM2Dw8cvxYZ6NSBIpDMDaQQ=",
+    "TransportType": "Mqtt"
+  },
   "AllowedHosts": "*"
 }
