--- a/DeviceSimulation/appsettings.json
+++ b/DeviceSimulation/appsettings.json
@@ -7,12 +7,12 @@
   },
   "device-1": {
     "DeviceId": "intersection-1",
-    "ConnectionString": "HostName=test-azure-hub.azure-devices.net;DeviceId=device-1;SharedAccessKey=iW1eksfB6tczkdokVjRk7OHh6zFNl1YThPOygVQ5I3s=",
+    "ConnectionString": "HostName=traffic-hub.azure-devices.net;DeviceId=intersection-1;SharedAccessKey=WgjeyVmjMYUut/sNBruVCMdqlZ8c85Svl5TZzz2nwjE=",
     "TransportType": "Mqtt"
   },
   "device-2": {
     "DeviceId": "intersection-2",
-    "ConnectionString": "HostName=test-azure-hub.azure-devices.net;DeviceId=contoso-device-1;SharedAccessKey=xj9Ph1GxKg5kDp97PwqsEM2Dw8cvxYZ6NSBIpDMDaQQ=",
+    "ConnectionString": "HostName=traffic-hub.azure-devices.net;DeviceId=intersection-2;SharedAccessKey=/o4tXVn+tzik3Q4rbulht+djZCjLm3aLuwZm6C+/lgY=",
     "TransportType": "Mqtt"
   },
   "AllowedHosts": "*"
