--- a/IoTHubManagement/appsettings.json
+++ b/IoTHubManagement/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "IoTHub": {
-    "ConnectionString": "HostName=test-azure-hub.azure-devices.net;SharedAccessKeyName=iothubowner;SharedAccessKey=67tq2aB7dua1XE/vLzCqN3UC7NSIspjy91Fz19Cr5Ng="
+    "ConnectionString": "HostName=traffic-hub.azure-devices.net;SharedAccessKeyName=iothubowner;SharedAccessKey=uaLlaLpxKHuVLg2hlI7thpqgs6aJDwIVcAIoTO8Och8="
   },
   "AllowedHosts": "*"
 }
