--- a/DeviceSimulation/appsettings.json
+++ b/DeviceSimulation/appsettings.json
@@ -15,5 +15,15 @@
     "ConnectionString": "HostName=traffic-hub.azure-devices.net;DeviceId=intersection-2;SharedAccessKey=/o4tXVn+tzik3Q4rbulht+djZCjLm3aLuwZm6C+/lgY=",
     "TransportType": "Mqtt"
   },
+  "device-3": {
+    "DeviceId": "raskrsnica-3",
+    "ConnectionString": "HostName=traffic-hub.azure-devices.net;DeviceId=raskrsnica-3;SharedAccessKey=PQCMmHnTo7iJWlfXlWGRaFe8guFooHUAmAIoTMYFzWw=",
+    "TransportType": "Mqtt"
+  },
+  "device-4": {
+    "DeviceId": "Vozda-Karadjordja-1",
+    "ConnectionString": "HostName=traffic-hub.azure-devices.net;DeviceId=Vozda-Karadjordja-1;SharedAccessKey=KLlq/lE9g53jLwnJOEM5PKOSe76K4YKxnAIoTNi0+7Q=",
+    "TransportType": "Mqtt"
+  },
   "AllowedHosts": "*"
 }
